# Watch-Folder-Launcher

./: Cargo.toml  README.md  build-windows.sh  config.json
.github/workflows/: release.yml
src/: main.rs  tray.rs
